--- a/editor.html
+++ b/editor.html
@@ -1,30 +1,59 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
+    <meta charset="utf-8">
 		<link rel="stylesheet" href="lib/codemirror/lib/codemirror.css">
 		<link rel="stylesheet" href="lib/codemirror/theme/monokai.css">
+		<link rel="stylesheet" href="lib/codemirror/theme/eclipse.css">
+		<link rel="stylesheet" href="lib/codemirror/theme/night.css">
+		<link rel="stylesheet" href="lib/codemirror/theme/mdn-like.css">
+		<link rel="stylesheet" href="lib/codemirror/theme/neat.css">
+		<link rel="stylesheet" href="lib/codemirror/theme/elegant.css">
+		<link rel="stylesheet" href="lib/codemirror/theme/ambiance.css">
+		<link rel="stylesheet" href="lib/codemirror/theme/the-matrix.css">
+		<link rel="stylesheet" href="lib/codemirror/theme/rubyblue.css">
 		<link rel="stylesheet" href="lib/codemirror/addon/dialog/dialog.css">
 		<link rel="stylesheet" href="lib/codemirror/addon/hint/show-hint.css">
 		<link rel="stylesheet" href="lib/codemirror/addon/tern/tern.css">
+		<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="lib/bootstrap/css/bootstrap-theme.css">
 		<link rel="stylesheet" href="css/editor.css">
+		
 		<script src="lib/codemirror/lib/codemirror.js"></script>
 		<script src="lib/emmet/emmet.min.js"></script>
 		<script src="lib/codemirror/addon/mode/loadmode.js"></script>
 		<script src="lib/codemirror/addon/dialog/dialog.js"></script>
 		<script src="lib/codemirror/addon/hint/show-hint.js"></script>
-		<script src="http://marijnhaverbeke.nl/acorn/acorn.js"></script>
-		<script src="http://marijnhaverbeke.nl/acorn/acorn_loose.js"></script>
-		<script src="http://marijnhaverbeke.nl/acorn/util/walk.js"></script>
-		<script src="http://ternjs.net/doc/demo/polyfill.js"></script>
-		<script src="http://ternjs.net/lib/signal.js"></script>
-		<script src="http://ternjs.net/lib/tern.js"></script>
-		<script src="http://ternjs.net/lib/def.js"></script>
-		<script src="http://ternjs.net/lib/comment.js"></script>
-		<script src="http://ternjs.net/lib/infer.js"></script>
-		<script src="http://ternjs.net/plugin/doc_comment.js"></script>
 		<script src="lib/codemirror/addon/tern/tern.js"></script>
+		
+		<script src="lib/jquery/js/jquery.min.js"></script>
+		<script src="lib/bootstrap/js/bootstrap.min.js"></script>
+		<script src="lib/angular/js/angular.min.js"></script>
 	</head>
 	<body>
-		<textarea id="editor"></textarea>
+		<div class="container-fluid" ng-app="CodeEditor">
+			<div id="toolbar" class="row" ng-controller="Toolbar">
+				<div class="btn-group col-md-10 col-sm-8 nopadding">
+					<button  ng-repeat="item in items" type="button" class="btn btn-default btn-toolbar"><span class="glyphicon {{item._class}}" ng-click="item.action(item)"></span> <span class="sr-only">{{item.title}}</span></button>
+				</div>
+				<div class="col-md-2 col-sm-4">
+					Theme : <select ng-model="theme" ng-options="theme for theme in themes"></select>
+				</div>
+			</div>
+			<div id="main" class="row">
+				<div id="c_editor" class="col-md-12 col-sm-12 nopadding">
+					<textarea id="editor"></textarea>
+				</div>
+				<div id="preview" class="col-md-6 col-sm-6 nopadding">
+					<iframe src=""></iframe>
+				</div>
+			</div>		
+			<div id="footer" class="row">
+				<div class="col-md-2 col-sm-4" id="state">					
+				</div>
+			</div>
+		</div>
 	</body>	
 	<script src="js/editor.js"></script>
+	<script src="js/app.js"></script>
 </html>
