--- a/editor.html
+++ b/editor.html
@@ -26,6 +26,18 @@
 		<script src="lib/codemirror/addon/hint/show-hint.js"></script>
 		<script src="lib/codemirror/addon/tern/tern.js"></script>
 		
+		<script src="lib/acorn/acorn.js"></script>
+		<script src="lib/acorn/walk.js"></script>
+		<script src="lib/acorn/acorn_loose.js"></script>
+		
+		<script src="lib/tern/polyfill.js"></script>
+		<script src="lib/tern/signal.js"></script>
+		<script src="lib/tern/tern.js"></script>
+		<script src="lib/tern/comment.js"></script>
+		<script src="lib/tern/def.js"></script>
+		<script src="lib/tern/doc_comment.js"></script>
+		<script src="lib/tern/infer.js"></script>		
+		
 		<script src="lib/jquery/js/jquery.min.js"></script>
 		<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 		<script src="lib/angular/js/angular.min.js"></script>
@@ -34,7 +46,7 @@
 		<div class="container-fluid" ng-app="CodeEditor">
 			<div id="toolbar" class="row" ng-controller="Toolbar">
 				<div class="btn-group col-md-10 col-sm-8 nopadding">
-					<button  ng-repeat="item in items" type="button" class="btn btn-default btn-toolbar"><span class="glyphicon {{item._class}}" ng-click="item.action(item)"></span> <span class="sr-only">{{item.title}}</span></button>
+					<button  ng-repeat="item in items" type="button" class="btn btn-default btn-toolbar" ng-click="item.action(item)"><span class="glyphicon {{item._class}}"></span> <span class="sr-only">{{item.title}}</span></button>
 				</div>
 				<div class="col-md-2 col-sm-4">
 					Theme : <select ng-model="theme" ng-options="theme for theme in themes"></select>
