- Add sublimetext shortcuts

--- a/editor.html
+++ b/editor.html
@@ -21,6 +21,7 @@
 		
 		<script src="lib/codemirror/lib/codemirror.js"></script>
 		<script src="lib/emmet/emmet.min.js"></script>
+		<script src="lib/codemirror/keymap/sublime.js"></script>
 		<script src="lib/codemirror/addon/mode/loadmode.js"></script>
 		<script src="lib/codemirror/addon/dialog/dialog.js"></script>
 		<script src="lib/codemirror/addon/hint/show-hint.js"></script>
